@@ -29,7 +29,7 @@ TOP		= ../..
 
 include $(TOP)/buildsys/gmake/prolog.gmake
 
-TARGET_APP	= suite
+TARGET_APP	= suite_x86win32fast
 UNITS		= case main
 CPPFLAGS	= -I$(TOP)/dyncall
 CXX_EXCEPTIONS 	= 0
